# cachelito

./: CHANGELOG.md  Cargo.toml  MACRO_EXPANSION.md  RACE_CONDITION_FIX.md  README.md  THREAD_LOCAL_STATS.md  publish.sh
.github/: CODEOWNERS
.github/workflows/: rust.yml
cachelito-async/: Cargo.toml  README.md
cachelito-async-macros/: Cargo.toml  README.md
cachelito-async-macros/src/: lib.rs
cachelito-async/examples/: async_arc.rs  async_basic.rs  async_concurrent.rs  async_lfu.rs  async_lru.rs  async_random.rs  async_smart_invalidation.rs  async_stats.rs  async_tlru.rs  conditional_caching_async.rs  debug_cache.rs  expand_test.rs  manual_test.rs  simple_test.rs  timing_test.rs
cachelito-async/src/: lib.rs
cachelito-async/tests/: arc_policy_tests.rs  async_conditional_caching_tests.rs  async_conditional_invalidation_tests.rs  async_invalidation_tests.rs  async_memory_limit_tests.rs  async_no_memory_estimator_tests.rs  eviction_orphaned_keys_tests.rs  lfu_tests.rs  memory_limit_async_tests.rs  memory_limit_edge_cases_async_tests.rs  random_policy_tests.rs  tlru_tests.rs
cachelito-core/: Cargo.toml
cachelito-core/benches/: cache_benchmark.rs
cachelito-core/src/: async_global_cache.rs  cache_entry.rs  eviction_policy.rs  global_cache.rs  global_cache.rs.bak  global_cache.rs.bak2  invalidation.rs  keys.rs  lib.rs  memory_estimator.rs  stats.rs  stats_registry.rs  thread_local_cache.rs  utils.rs
cachelito-macro-utils/: Cargo.toml  README.md
cachelito-macro-utils/src/: lib.rs
cachelito-macros/: Cargo.toml
cachelito-macros/src/: lib.rs
cachelito_core/: Cargo.toml
cachelito_core/benches/: cache_benchmark.rs
cachelito_core/src/: eviction_policy.rs  global_cache.rs  lib.rs  thread_local_cache.rs
cachelito_macros/: Cargo.toml
cachelito_macros/src/: lib.rs
examples/: arc_policy.rs  cache_comparison.rs  cache_limit.rs  cache_stats.rs  concurrent_stats.rs  conditional_caching.rs  conditional_invalidation.rs  custom_cache_name.rs  custom_type_custom_key.rs  custom_type_default_key.rs  fifo.rs  fifo_default.rs  global_scope.rs  lfu.rs  lru.rs  main.rs  memory_estimation.rs  memory_limit.rs  named_invalidation.rs  parking_lot_performance.rs  policy_comparison.rs  random_policy.rs  result_caching.rs  rwlock_concurrent_reads.rs  smart_invalidation.rs  test_invalidation_behavior.rs  test_stats_simple.rs  thread_local_stats_internals.rs  tlru.rs  tlru_frequency_weight.rs  ttl.rs
src/: lib.rs
tests/: arc_policy_tests.rs  conditional_caching_tests.rs  conditional_invalidation_tests.rs  custom_name_tests.rs  eviction_orphaned_keys_tests.rs  invalidation_tests.rs  lfu_tests.rs  memory_limit_edge_cases_tests.rs  memory_limit_tests.rs  named_invalidation_tests.rs  random_policy_tests.rs
