[workspace]
members = ["cachelito_core", "cachelito_macros"]

[package]
name = "cachelito"
version = "0.5.0"
edition = "2021"

[dependencies]
cachelito_core = { path = "./cachelito_core" }
cachelito_macros = { path = "./cachelito_macros" }
once_cell = "1.21.3"
parking_lot = "0.12"

[lib]
name = "cachelito"
path = "src/lib.rs"
