[workspace]
members = ["cachelito-core", "cachelito-macros"]

[package]
name = "cachelito"
version = "0.5.0"
edition = "2021"

[dependencies]
cachelito-core = { path = "./cachelito-core" }
cachelito-macros = { path = "./cachelito-macros" }
once_cell = "1.21.3"
parking_lot = "0.12"

[lib]
name = "cachelito"
path = "src/lib.rs"
