[package]
name = "cachelito-async-macros"
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"

description = "Async procedural macros for cachelito - automatic async caching attributes"
authors = ["josepdcs <[email protected]>"]
repository = "https://github.com/josepdcs/cachelito"
homepage = "https://github.com/josepdcs/cachelito"
documentation = "https://docs.rs/cachelito-async-macros"
readme = "../README.md"
keywords = ["cache", "async", "macro", "procedural", "attribute"]
categories = ["development-tools::procedural-macro-helpers", "caching", "asynchronous"]

rust-version = "1.70.0"

[lib]
proc-macro = true
name = "cachelito_async_macros"
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
cachelito-macro-utils = { version = "0.11.0", path = "../cachelito-macro-utils" }
