[package]
name = "cachelito-core"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"

description = "Core functionality for cachelito - global cache with LRU/FIFO/LFU/ARC/Random eviction policies"
authors = ["josepdcs <[email protected]>"]
repository = "https://github.com/josepdcs/cachelito"
homepage = "https://github.com/josepdcs/cachelito"
documentation = "https://docs.rs/cachelito-core"
readme = "../README.md"
keywords = ["cache", "lru", "lfu", "parking-lot", "rwlock"]
categories = ["caching", "data-structures", "concurrency"]

rust-version = "1.70.0"

[features]
default = ["stats"]
stats = []

[dependencies]
once_cell = "1.21.3"
parking_lot = "0.12"
dashmap = "6.1"
fastrand = "2.3"

[dev-dependencies]
criterion = "0.7.0"
serial_test = "3.2"

[lib]
name = "cachelito_core"
path = "src/lib.rs"
