[package]
name = "cachelito-macros"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"

description = "Procedural macros for cachelito - automatic caching attributes"
authors = ["josepdcs <[email protected]>"]
repository = "https://github.com/josepdcs/cachelito"
homepage = "https://github.com/josepdcs/cachelito"
documentation = "https://docs.rs/cachelito-macros"
readme = "../README.md"
keywords = ["cache", "macro", "procedural", "attribute", "memoization"]
categories = ["development-tools::procedural-macro-helpers", "caching"]

rust-version = "1.70.0"

[lib]
proc-macro = true
name = "cachelito_macros"
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
cachelito-macro-utils = { version = "0.7.0", path = "../cachelito-macro-utils" }
